--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,32 @@
-/**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
+@import "../../components/footer/footer.wxss";
+@import "../../components/header/header.wxss";
+/* @import "../../components/calendar/calendar.wxss"; */
+
+.search-box {
+  width: 90%;
+  /* height: 100rpx; */
+  margin-top: 0;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows:auto auto;
+  justify-content: space-between;
   align-items: center;
+  font-size: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.btn {
+  width: 50%;
+  margin-top: 30rpx;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.index-content {
+  padding: 20px 20px;
 }
 
-.usermotto {
-  margin-top: 200px;
+.submit-button {
+  margin: 20px 5px; 
+  font-size: 10px;
 }
+
