--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,4 +1,12 @@
 <!--pages/personal/order.wxml-->
-<view class="">
-  <view>order</view>
+<view class="order">
+  <view class="order-detail">
+    <view>我的订单</view>
+    <view>订单号：{{orderNo}}</view>
+    <view>房间：{{orderRoom}}</view>
+    <view>入住日期：{{checkinTime}}</view>
+    <view>离店日期：{{checkoutTime}}</view>
+    <view>价格：{{price}}</view>
+  </view>
+  <button type="default" loading="{{loading}}" bindtap="payorder">支付</button>
 </view>
